# hackathon-2-Todo-app

./: pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: crud-patterns.md  example-prompts.md  task-operations.md
.specify/memory/: constitution.md
history/prompts/phase1-console/: 001-clarify-phase1-console.clarify.prompt.md  002-clarify-plan-repl-style.clarify.prompt.md  003-clarify-tasks-cli-library.clarify.prompt.md  004-implement-phase1-console.implement.prompt.md  005-interactive-menu-ui-enhancement.green.prompt.md  006-cli-tests-and-reusable-intelligence.green.prompt.md
specs/phase1-console/: plan.md  spec.md  tasks.md
src/: main.py
src/cli/: console.py
src/models/: task.py
src/services/: task_service.py
tests/: test_cli.py  test_task_service.py
